# Celestia

./: .gitignore  README.md  electron-builder.json5  package-lock.json  package.json  vite.config.ts
dist-electron/: index-C2lbYB88.js  index-C3Bfbuvl.js  main.js  preload.mjs
electron/: adm-zip.d.ts  celestia.d.ts  electron-env.d.ts  main.ts  preload.ts  rich_presence.ts
electron/agent/: agentLoop.ts  diff.ts  systemPrompt.ts  tools.ts
resources/: lsp-bridge.cjs
src/: App.css  App.tsx  celestia.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  rich_presence.rs  terminal.rs
src-tauri/src/agent/: diff.rs  mod.rs  system_prompt.rs  tools.rs
src-tauri/src/commands/: agent.rs  dialog.rs  fs.rs  mod.rs  ollama.rs  rich_presence.rs  shell.rs  stella.rs  terminal.rs  window.rs
src/assets/: papermcdocs.json
src/core/: editor.ts  fs.ts  layout.ts  output.ts  path.ts  project.ts  terminal.ts  terminalOutput.ts
src/core/agent/: types.ts
src/core/linting/: kotlinLanguage.ts  setupLinting.ts  standardLinters.ts  stellaLanguage.ts  stellaLinter.ts
src/core/lsp/: kotlinLsp.ts
src/lib/: celestia.ts
src/ui/: AgentChat.css  AgentChat.tsx  ContextMenu.css  ContextMenu.tsx  EditorView.css  EditorView.tsx  FileIcon.css  FileIcon.tsx  IconButton.css  IconButton.tsx  LayoutView.css  LayoutView.tsx  Navbar.css  Navbar.tsx  Sidebar.css  Sidebar.tsx  TerminalPane.css  TerminalPane.tsx  TerminalView.css  TerminalView.tsx  TitleBar.css  TitleBar.tsx  icons.tsx
(+8 files in other folders)
