[package]
name = "celestia"
version = "0.0.0"
description = "Celestia IDE"
authors = ["Celestia"]
edition = "2021"

[lib]
name = "celestia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "celestia"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
zip = "2"
walkdir = "2"
regex = "1"
discord-rich-presence = "0.2"
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
